--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ body#objectified-bg {
 
 .time-network h1 {
 	padding: 22px 30px 15px 30px;
-    margin-top: -20px;
+	margin-top: -16px;
 }
 
 .time-network img {
@@ -150,7 +150,7 @@ body#objectified-bg {
 	    font-size: 12px;
 	    top: -13px;
 	}
-	.video-container iframe {
+	.video-container video {
 		padding: 7px;
 	}
 	.time-network img {
