--- a/css/main.css
+++ b/css/main.css
@@ -1,163 +1,125 @@
-body {color: #000;}
+body {
+  color: #000; }
+
+div {
+  display: block; }
 
 @font-face {
-	font-family: 'fontello';
-	src: url('../font/fontello.eot');
-	src: url('../font/fontello.eot') format('embedded-opentype'),
-	url('../font/fontello.woff') format('woff'),
-	url('../font/fontello.ttf') format('truetype'),
-	url('../font/fontello.svg?4789795#fontello') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-
+  font-family: 'fontello';
+  src: url("../font/fontello.eot");
+  src: url("../font/fontello.eot") format("embedded-opentype"), url("../font/fontello.woff") format("woff"), url("../font/fontello.ttf") format("truetype"), url("../font/fontello.svg?4789795#fontello") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 body#objectified-bg {
-	background: #000 url(../images/objectified-bg.jpg) no-repeat top center fixed;
-}
+  background: #000 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed; }
+
+.header {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto; }
 
 .logo {
-	float: right;
-}
+  width: 50%;
+  height: 200px;
+  flex: 1 0 auto;
+  order: 1; }
 
-.logo img {
-    width: 400px;
-    margin-top: 20px;
-}
+.time {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 570px;
+  height: 150px;
+  flex: 1 0 auto;
+  order: 2;
+  text-align: center; }
 
-.tagline {
-	position: absolute;
-	top: 28px;
-	float: left;
-	width: 450px;
-}
+.video {
+  width: 100%;
+  height: 300px;
+  background-color: black;
+  flex: 1 0 auto;
+  order: 4;
+  padding: 20px;
+  color: white; }
 
-.tagline h1, .time-network h1 {
-	font-family: 'Oswald', sans-serif;
-	text-transform: uppercase;
-	font-size: 50px;
-	line-height: 1;
-	background-color: #fbe04a;
-	padding: 12px 30px 17px 30px;
-}
+.life-stories {
+  width: 100%;
+  height: 160px;
+  background-color: silver;
+  flex: 1 0 auto;
+  order: 3;
+  padding: 20px; }
+
+.nav-stripe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 144px;
+  background-color: #000;
+  z-index: -1; }
+  .nav-stripe::after {
+    position: absolute;
+    bottom: 0;
+    content: "";
+    height: 9px;
+    width: 100%;
+    background: #cfa144;
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #cfa144 57%, #af8736 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #cfa144 57%, #af8736 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #cfa144 57%, #af8736 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfa144', endColorstr='#af8736',GradientType=0 );
+    /* IE6-9 */ }
 
 .video-container {
-	padding-bottom: 52.25%; /* 16:9 */
-}
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  margin-bottom: -63px;
+  height: 0; }
 
 .video-container video {
-	background-color: #fbe04a;
-	padding: 15px;
-	width: 90%;
-	margin: 0 5%;
-}
+  background-color: #fbe04a;
+  padding: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90%;
+  height: 90%;
+  margin: 0 5%; }
 
-.time-network {
-    width: 633px;
-    bottom: 0;
-    right: 0;
-    float: right;
-}
-
-.time-network sup {
-    font-size: 17px;
-    top: -27px;
-}
-
-.time-network h1 {
-	padding: 22px 30px 15px 30px;
-	margin-top: -16px;
-}
-
-.time-network img {
-    width: 72px;
-}
-
-.social-media {
-	float: left;
-    margin-top: 10px;
-}
-
-.social-media i {
-    margin-right: 30px;
-    font-family: "fontello";
-	font-size: 50px;
-	font-style: normal;
-    color: #fbe04a;
-}
-
-.social-media a:hover,
-.social-media a:focus {
-    text-decoration: none;
-}
-
-.social-media a:hover i {
-    color: #d6be3c;
-}
-
-.icon-mail:before { content: '\e800'; }
-.icon-facebook:before { content: '\e803'; } 
-.icon-twitter:before { content: '\e804'; } 
-
-
+@media (max-width: 1200) {
+  .video-container {
+    margin-bottom: -54px; } }
 @media (max-width: 991px) {
-	.tagline {
-	    position: absolute;
-	    top: 22px;
-	    width: 340px;
-	}
-	.tagline h1, .time-network h1 {
-		font-size: 36px;
-	}
-	.logo img {
-    	width: 300px;
-	}
-	.time-network {
-   		width: 502px;
-	}
-	.social-media i {
-		font-size: 45px;
-	}
-}
+  .video-container {
+    margin-bottom: -41px; } }
+@media (max-width: 768px) {
+  .logo {
+    order: 1; }
 
-@media (max-width: 767px) {
-	.logo,
-	.social-media {
-		float: left;
-		text-align: center;
-    	width: 100%;
-	}
-	.tagline {
-	    position: relative;
-	    left: 8vw;
-	    width: initial;
-	    margin-top: -35px;
-	}
-	.tagline h1, .time-network h1 {
-	    font-size: 4.75vw;
-	    padding: 12px 15px 19px 15px;
-	}
-	.time-network h1 {
-	    padding: 10px 15px 5px 15px;
-	    margin-top: -1px;
-	}
-	.time-network {
-	    position: relative;
-	    width: initial;
-	    right: 7vw;
-	}
-	.time-network sup {
-	    font-size: 12px;
-	    top: -13px;
-	}
-	.video-container video {
-		padding: 7px;
-	}
-	.time-network img {
-	    width: 42px;
-	}
-	.social-media i {
-    margin: 0 10px;
-	}
-}
+  .time {
+    order: 3;
+    position: static;
+    width: 100%; }
 
+  .life-stories {
+    order: 4; }
+
+  .video {
+    order: 2; }
+
+  .video-container {
+    margin-bottom: -49px; } }
+
+/*# sourceMappingURL=main.css.map */
