--- a/css/main.css
+++ b/css/main.css
@@ -13,27 +13,26 @@ div {
 body#objectified-bg {
   background: #000 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed; }
 
-.header {
+.top-half {
   position: relative;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1290px;
   margin: 0 auto; }
 
 .logo {
-  width: 50%;
-  height: 200px;
+  width: 65%;
+  margin-left: 80px;
   flex: 1 0 auto;
   order: 1; }
 
 .time {
   position: absolute;
-  top: 0;
+  top: 20px;
   right: 0;
   width: 570px;
-  height: 150px;
   flex: 1 0 auto;
   order: 2;
   text-align: center; }
@@ -41,11 +40,11 @@ body#objectified-bg {
 .video {
   width: 100%;
   height: 300px;
-  background-color: black;
+  background-color: white;
   flex: 1 0 auto;
   order: 4;
   padding: 20px;
-  color: white; }
+  color: #000; }
 
 .life-stories {
   width: 100%;
@@ -98,20 +97,43 @@ body#objectified-bg {
   height: 90%;
   margin: 0 5%; }
 
-@media (max-width: 1200) {
+@media (max-width: 1200px) {
   .video-container {
-    margin-bottom: -54px; } }
+    margin-bottom: -54px; }
+
+  .logo img {
+    width: 400px;
+    margin-bottom: 50px; }
+
+  .time img {
+    width: 300px; } }
 @media (max-width: 991px) {
   .video-container {
-    margin-bottom: -41px; } }
+    margin-bottom: -41px; }
+
+  .logo {
+    margin-left: 10%; }
+
+  .time {
+    text-align: right;
+    margin-right: 10%; }
+    .time img {
+      width: 250px; } }
 @media (max-width: 768px) {
   .logo {
-    order: 1; }
+    width: 100%;
+    order: 1;
+    margin-left: 0;
+    margin-top: 10px;
+    text-align: center; }
+    .logo img {
+      width: 340px; }
 
   .time {
     order: 3;
     position: static;
-    width: 100%; }
+    width: 100%;
+    text-align: center; }
 
   .life-stories {
     order: 4; }
