--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,29 +22,28 @@ body#objectified-bg {
   background: #000 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed;
 }
 
-.header {
+.top-half {
   position: relative;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1290px;
   margin:  0 auto;
 }
 
 .logo {
-  width: 50%;
-  height: 200px;
+  width: 65%;
+  margin-left: 80px;
   flex: 1 0 auto;
   order: 1;
 }
 
 .time {
   position: absolute;
-  top: 0;
+  top: 20px;
   right: 0;
   width: 570px;
-  height: 150px;
   flex: 1 0 auto;
   order: 2;
   text-align: center;
@@ -53,11 +52,11 @@ body#objectified-bg {
 .video {
   width: 100%;
   height: 300px;
-  background-color: black;
+  background-color: white;
   flex: 1 0 auto;
   order: 4;
   padding: 20px;
-  color: white;
+  color: #000;
 }
 
 .life-stories {
@@ -110,9 +109,18 @@ body#objectified-bg {
   margin: 0 5%;
 }
 
-@media (max-width: 1200) {
+@media (max-width: 1200px) {
   .video-container {
     margin-bottom: -54px;
+  }
+  .logo {
+    img {
+      width: 400px;
+      margin-bottom: 50px;
+    }
+  }
+  .time img {
+    width: 300px;
   }
 }
 
@@ -121,16 +129,34 @@ body#objectified-bg {
   .video-container {
     margin-bottom: -41px;
   }
+  .logo {
+    margin-left: 10%;
+  }
+  .time  {
+    text-align: right;
+    margin-right: 10%;
+    img {
+      width: 250px;
+    }
+  }
 }
 
 @media (max-width: 768px) {
   .logo {
+    width: 100%;
+    img {
+      width: 340px;
+    }
     order: 1;
+    margin-left: 0;
+    margin-top: 10px;
+    text-align: center;
   }
   .time {
     order: 3;
     position: static;
     width: 100%;
+    text-align: center;
   }
   .life-stories {
     order: 4;
