Re #5: styled life stories section responsively

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
-  color: #000; }
+  color: #fff;
+  font-family: 'Source Sans Pro', sans-serif; }
 
 div {
   display: block; }
@@ -11,7 +12,16 @@ div {
   font-weight: normal;
   font-style: normal; }
 body#objectified-bg {
-  background: #000 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed; }
+  background: #000 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed;
+  background-position-y: 142px; }
+
+h2 {
+  margin: 0;
+  font-size: 3.75em;
+  font-family: "Proxima Nova Extra Condensed";
+  font-weight: 900;
+  font-style: italic;
+  text-transform: uppercase; }
 
 .top-half {
   position: relative;
@@ -48,11 +58,26 @@ body#objectified-bg {
 
 .life-stories {
   width: 100%;
-  height: 160px;
-  background-color: silver;
   flex: 1 0 auto;
   order: 3;
   padding: 20px; }
+
+.life-stories-title {
+  float: left;
+  padding-left: 80px;
+  width: 40%; }
+
+.life-stories-title-f1 {
+  color: #fff; }
+
+.life-stories-title-f2 {
+  color: #EBC647; }
+
+.life-stories-blurbs {
+  float: left;
+  width: 60%;
+  font-size: 1.35em;
+  padding: 5px 80px 5px 10px; }
 
 .nav-stripe {
   position: absolute;
@@ -106,7 +131,10 @@ body#objectified-bg {
     margin-bottom: 50px; }
 
   .time img {
-    width: 300px; } }
+    width: 300px; }
+
+  .life-stories-title h2 {
+    font-size: 3em; } }
 @media (max-width: 991px) {
   .video-container {
     margin-bottom: -41px; }
@@ -118,7 +146,16 @@ body#objectified-bg {
     text-align: right;
     margin-right: 10%; }
     .time img {
-      width: 250px; } }
+      width: 250px; }
+
+  .life-stories-title,
+  .life-stories-blurbs {
+    width: 100%;
+    padding-left: 80px; }
+
+  .life-stories-title h2 {
+    float: left;
+    margin-right: 7px; } }
 @media (max-width: 768px) {
   .logo {
     width: 100%;
@@ -136,12 +173,26 @@ body#objectified-bg {
     text-align: center; }
 
   .life-stories {
-    order: 4; }
+    order: 4;
+    padding: 30px; }
 
   .video {
     order: 2; }
 
   .video-container {
-    margin-bottom: -49px; } }
+    margin-bottom: -49px; }
+
+  .life-stories-title,
+  .life-stories-blurbs {
+    padding: 0; }
+
+  .life-stories-blurbs {
+    margin-top: 20px; }
+
+  .life-stories-title h2 {
+    float: initial;
+    margin-right: 0;
+    font-size: 2.75em;
+    line-height: .9; } }
 
 /*# sourceMappingURL=main.css.map */
