--- a/css/main.css
+++ b/css/main.css
@@ -49,18 +49,14 @@ h2 {
 
 .video {
   width: 100%;
-  height: 300px;
-  background-color: white;
   flex: 1 0 auto;
-  order: 4;
-  padding: 20px;
-  color: #000; }
+  order: 4; }
 
 .life-stories {
   width: 100%;
   flex: 1 0 auto;
   order: 3;
-  padding: 20px; }
+  padding: 20px 20px 50px; }
 
 .life-stories-title {
   float: left;
@@ -107,38 +103,44 @@ h2 {
 .video-container {
   position: relative;
   padding-bottom: 56.25%;
-  /* 16:9 */
-  padding-top: 25px;
-  margin-bottom: -63px;
+  padding-top: 3px;
   height: 0; }
 
 .video-container video {
-  background-color: #fbe04a;
-  padding: 15px;
+  padding: 3px;
   position: absolute;
   top: 0;
   left: 0;
-  width: 90%;
-  height: 90%;
-  margin: 0 5%; }
+  width: 100%;
+  height: 100%;
+  background: #af8736;
+  /* Old browsers */
+  background: -moz-linear-gradient(45deg, #af8736 0%, #ebc647 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #af8736 0%, #ebc647 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #af8736 0%, #ebc647 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#af8736', endColorstr='#ebc647',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */ }
+
+.bottom-half {
+  max-width: 1290px;
+  margin: 0 auto; }
 
 @media (max-width: 1200px) {
-  .video-container {
-    margin-bottom: -54px; }
-
   .logo img {
-    width: 400px;
-    margin-bottom: 50px; }
+    width: 400px; }
 
   .time img {
     width: 300px; }
 
+  .life-stories {
+    padding: 30px 20px; }
+
   .life-stories-title h2 {
     font-size: 3em; } }
 @media (max-width: 991px) {
-  .video-container {
-    margin-bottom: -41px; }
-
   .logo {
     margin-left: 10%; }
 
@@ -160,8 +162,7 @@ h2 {
   .logo {
     width: 100%;
     order: 1;
-    margin-left: 0;
-    margin-top: 10px;
+    margin: 10px 0 12px;
     text-align: center; }
     .logo img {
       width: 340px; }
@@ -170,6 +171,7 @@ h2 {
     order: 3;
     position: static;
     width: 100%;
+    margin-top: 10px;
     text-align: center; }
 
   .life-stories {
@@ -178,9 +180,6 @@ h2 {
 
   .video {
     order: 2; }
-
-  .video-container {
-    margin-bottom: -49px; }
 
   .life-stories-title,
   .life-stories-blurbs {
@@ -193,6 +192,11 @@ h2 {
     float: initial;
     margin-right: 0;
     font-size: 2.75em;
-    line-height: .9; } }
+    line-height: .9; }
+
+  .video-container {
+    padding-top: 0; }
+    .video-container video {
+      padding: 0; } }
 
 /*# sourceMappingURL=main.css.map */
