--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,8 +20,7 @@ div {
 
 
 body#objectified-bg {
-  background: #000 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed;
-  background-position-y: 142px;
+  background: #130900 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed;
 }
 
 h2 {
@@ -126,7 +125,7 @@ h2 {
 }
 
 .video-container video {
-  padding: 3px;
+  padding: 4px;
   position: absolute;
   top: 0;
   left: 0;
@@ -146,18 +145,24 @@ h2 {
 }
 
 .season-guests-title {
-  background-color: red;
   padding: 50px 0;
 }
 
 .season-guests-row {
-  background-color: blue;
+  margin-bottom: 50px;
+  padding: 0;
+}
+
+.season-guests-celebrity {
+  float: left;
+  width: 20%;
+  padding: 0 0 0 20px;
   margin-bottom: 50px;
 }
 
 .guest-image {
   width: calc(100% + 1px);
-  padding: 2px;
+  padding: 4px;
   background: #af8736; /* Old browsers */
   background: -moz-linear-gradient(45deg, #af8736 0%, #ebc647 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(45deg, #af8736 0%,#ebc647 100%); /* Chrome10-25,Safari5.1-6 */
@@ -170,6 +175,7 @@ h2 {
 }
 
 .guest-date {
+  margin-top: 10px;
   font-weight: bold;
   font-size: 1.25em;
   color: #9B9B9B;
@@ -180,11 +186,15 @@ h2 {
   font-family: "Proxima Nova Extra Condensed";
   font-weight: 900;
   font-style: italic;
+  line-height: 1;
   text-transform: uppercase;
   color: #EBC647;
 }
 
 @media (max-width: 1200px) {
+  h2 {
+    font-size: 3em;
+  }
   .logo {
     img {
       width: 400px;
@@ -196,8 +206,13 @@ h2 {
   .life-stories {
     padding: 30px 20px;
   }
-  .life-stories-title h2 {
-    font-size: 3em;
+  .bottom-half {
+    padding: 50px 20px 50px 100px;
+  }
+  .season-guests-celebrity {
+    width: 25%;
+    height: 300px;
+    margin-bottom: 0;
   }
 }
 
@@ -221,6 +236,12 @@ h2 {
   .life-stories-title h2 {
     float: left;
     margin-right: 7px;
+  }
+  .season-guests-celebrity {
+    width: 33.333333%;
+  }
+  .season-guests-title {
+    margin-right: 50px;
   }
 }
 
@@ -261,11 +282,32 @@ h2 {
     font-size: 2.75em;
     line-height: .9;
   }
+  .season-guests-title {
+    padding: 0 0 80px 30px;
+    h2 {
+      float: left;
+      margin-right: 6px;
+      font-size: 2.75em;
+    }
+  }
   .video-container {
     padding-top: 0;
     video {
       padding: 0;
     }
   }
+  .season-guests-row {
+    padding: 0 30px 0 10px;
+  }
+  .bottom-half {
+    padding: 0;
+  }
+}
 
+@media (max-width: 620px) {
+  .season-guests-celebrity {
+    width: 50%;
+    height: inherit;
+    margin-bottom: 50px;
+  }
 }
