--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,7 @@ div {
 
 
 body#objectified-bg {
-  background: #130900 url(../images/objectified-season-2-bg.jpg) no-repeat top center fixed;
+  background: #130900 url(../images/objectified-season-2-bg.jpg) top center fixed;
 }
 
 h2 {
@@ -176,7 +176,7 @@ h2 {
 
 .guest-date {
   margin-top: 10px;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 1.25em;
   color: #9B9B9B;
 }
