--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
 body {
   color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 div {
@@ -195,6 +197,9 @@ h2 {
   h2 {
     font-size: 3em;
   }
+  .nav-stripe {
+    height: 130px;
+  }
   .logo {
     img {
       width: 400px;
@@ -205,6 +210,9 @@ h2 {
   }
   .life-stories {
     padding: 30px 20px;
+  }
+  .video {
+    padding: 0 80px;
   }
   .bottom-half {
     padding: 50px 20px 50px 100px;
@@ -218,6 +226,9 @@ h2 {
 
 
 @media (max-width: 991px) {
+  .nav-stripe {
+    height: 120px;
+  }
   .logo {
     margin-left: 10%;
   }
@@ -227,6 +238,9 @@ h2 {
     img {
       width: 250px;
     }
+  }
+  .video {
+    padding: 0 100px;
   }
   .life-stories-title,
   .life-stories-blurbs {
@@ -246,6 +260,9 @@ h2 {
 }
 
 @media (max-width: 768px) {
+  .nav-stripe {
+    height: 144px;
+  }
   .logo {
     width: 100%;
     order: 1;
@@ -258,9 +275,10 @@ h2 {
   .time {
     order: 3;
     position: static;
+    padding: 10px 0;
     width: 100%;
-    margin-top: 10px;
     text-align: center;
+    background-color: #000;
   }
   .life-stories {
     order: 4;
@@ -268,6 +286,7 @@ h2 {
   }
   .video {
     order: 2;
+    padding: 0;
   }
   .life-stories-title,
   .life-stories-blurbs {
@@ -283,7 +302,7 @@ h2 {
     line-height: .9;
   }
   .season-guests-title {
-    padding: 0 0 80px 30px;
+    padding: 0 0 50px 30px;
     h2 {
       float: left;
       margin-right: 6px;
@@ -305,6 +324,9 @@ h2 {
 }
 
 @media (max-width: 620px) {
+  .time img {
+    width: initial;
+  }
   .season-guests-celebrity {
     width: 50%;
     height: inherit;
