--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,28 @@ div {
   src: url("../font/fontello.eot") format("embedded-opentype"), url("../font/fontello.woff") format("woff"), url("../font/fontello.ttf") format("truetype"), url("../font/fontello.svg?4789795#fontello") format("svg");
   font-weight: normal;
   font-style: normal; }
+@font-face {
+  font-family: 'ProximaNovaExCn_Bold';
+  src: url("../font/proxima-nova-extra-condensed/bold-webfont.woff2") format("woff2"), url("../font/proxima-nova-extra-condensed/bold-webfont.woff") format("woff"), url("../font/proxima-nova-extra-condensed/bold-webfont.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: 'ProximaNovaExCn_Black';
+  src: url("../font/proxima-nova-extra-condensed/black-webfont.woff2") format("woff2"), url("../font/proxima-nova-extra-condensed/black-webfont.woff") format("woff"), url("../font/proxima-nova-extra-condensed/black-webfont.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: 'ProximaNovaExCn_Black_Italic';
+  src: url("../font/proxima-nova-extra-condensed/black-italic-webfont.woff2") format("woff2"), url("../font/proxima-nova-extra-condensed/black-italic-webfont.woff") format("woff"), url("../font/proxima-nova-extra-condensed/black-italic-webfont.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal; }
 body#objectified-bg {
   background: #130900 url(../images/objectified-season-2-bg.jpg) top center fixed; }
 
 h2 {
   margin: 0;
   font-size: 3.75em;
-  font-family: "Proxima Nova Extra Condensed";
+  font-family: 'ProximaNovaExCn_Black_Italic';
   font-weight: 900;
   font-style: italic;
   text-transform: uppercase; }
@@ -137,13 +152,16 @@ h2 {
 
 .season-guests-row {
   margin-bottom: 50px;
-  padding: 0; }
+  padding: 0;
+  font-size: 0; }
 
 .season-guests-celebrity {
-  float: left;
+  display: inline-block;
   width: 20%;
   padding: 0 0 0 20px;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+  vertical-align: top;
+  font-size: 14px; }
 
 .guest-image {
   width: calc(100% + 1px);
@@ -170,7 +188,7 @@ h2 {
 
 .guest-name {
   font-size: 1.75em;
-  font-family: "Proxima Nova Extra Condensed";
+  font-family: 'ProximaNovaExCn_Bold';
   font-weight: 900;
   font-style: italic;
   line-height: 1;
