Re #5: updating guest-name font

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -179,7 +179,7 @@ h2 {
 }
 .guest-name {
   font-size: 1.75em;
-  font-family: 'ProximaNovaExCn_Bold';
+  font-family: 'ProximaNovaExCn_Black_Italic';
   font-weight: 900;
   font-style: italic;
   line-height: 1;
