--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,40 @@ h2 {
   flex: 1 0 auto;
   order: 4; }
 
+.video-border {
+  width: 100%;
+  padding: 4px;
+  background: #af8736;
+  /* Old browsers */
+  background: -moz-linear-gradient(45deg, #af8736 0%, #ebc647 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #af8736 0%, #ebc647 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #af8736 0%, #ebc647 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#af8736', endColorstr='#ebc647',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */ }
+  @media (max-width: 768px) {
+    .video-border {
+      padding: 0;
+      background: transparent; } }
+
+.video-poster {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/celebs/video-still-magic.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.is-hidden {
+  display: none; }
+
 .life-stories {
   width: 100%;
   flex: 1 0 auto;
@@ -124,22 +158,11 @@ h2 {
   height: 0; }
 
 .video-container video {
-  padding: 4px;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background: #af8736;
-  /* Old browsers */
-  background: -moz-linear-gradient(45deg, #af8736 0%, #ebc647 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(45deg, #af8736 0%, #ebc647 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(45deg, #af8736 0%, #ebc647 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#af8736', endColorstr='#ebc647',GradientType=1 );
-  /* IE6-9 fallback on horizontal gradient */ }
+  height: 100%; }
 
 .bottom-half {
   max-width: 1290px;
@@ -344,9 +367,6 @@ h2 {
 
   .st0 {
     stroke-width: 10px !important; }
-
-  .video-container {
-    padding-bottom: 100%; }
 
   video[poster] {
     object-fit: cover; } }
