--- a/css/main.css
+++ b/css/main.css
@@ -368,6 +368,9 @@ h2 {
   .st0 {
     stroke-width: 10px !important; }
 
+  .video-container {
+    padding-bottom: 100%; }
+
   video[poster] {
     object-fit: cover; } }
 
