--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,6 +82,7 @@ h2 {
   width: 100%;
   flex: 1 0 auto;
   order: 4;
+  background: #000;
 }
 
 .video-border {
@@ -112,14 +113,20 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: #000;
   background-image: url(../images/celebs/video-still-magic.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+  opacity: 0;
+
+  &.is-loaded {
+    opacity: 1;
+  }
 }
 
 .is-hidden {
-  display: none;
+  display: none !important;
 }
 
 .life-stories {
@@ -160,6 +167,7 @@ h2 {
   height: 144px;
   background-color: #000;
   z-index: -1;
+
   &::after {
     position: absolute;
     bottom: 0;
@@ -172,6 +180,7 @@ h2 {
     background: linear-gradient(to bottom, #cfa144 57%,#af8736 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfa144', endColorstr='#af8736',GradientType=0 ); /* IE6-9 */
   }
+
 }
 
 .video-container {
@@ -238,7 +247,6 @@ h2 {
 .guest-name {
   font-size: 1.75em;
   font-family: 'ProximaNovaExCn_Black_Italic';
-  font-weight: 900;
   line-height: 1;
   text-transform: uppercase;
   color: #EBC647;
@@ -253,17 +261,22 @@ h2 {
   width: 100%;
   height: 100%;
   padding: 10px calc(50% - 50px);
+  z-index: 100;
   position: absolute;
   top: 0;
   left: 0;
   display: block;
-  opacity: 0.95;
+  opacity: 0;
   cursor: pointer;
-  background-image: linear-gradient(transparent, rgba(0,0,0,.5));
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
   transition: opacity 150ms;
 }
 
-.video-overlay-play-button:hover {
+.video-overlay-play-button.is-loaded {
+  opacity: 0.95;
+}
+
+.video-overlay-play-button.is-loaded:hover {
   opacity: 1;
 }
 
