--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,7 +82,6 @@ h2 {
   width: 100%;
   flex: 1 0 auto;
   order: 4;
-  background: #000;
 }
 
 .video-border {
@@ -282,6 +281,15 @@ h2 {
 
 .video-overlay-play-button.is-hidden {
   display: none;
+}
+
+@media (min-width: 1201px) and (max-width: 1300px) {
+  .video {
+    padding: 0 40px;
+  }
+  .bottom-half {
+    padding: 50px 40px 0 40px;
+  }
 }
 
 @media (max-width: 1200px) {
